@@ -1,3 +1,8 @@
+Mon Jun  7 12:27:29 2010  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* regexp.c (re_compile_pattern): allow zero times match for
+	  non-greedy range repeatation. [ruby-core:30613]
+
 Sat Jun  5 13:31:15 2010  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>
 
 	* lib/matrix.rb: Matrix library copied from 1.9. It is now identical
